Adding hobbies list

--- a/index.html
+++ b/index.html
@@ -39,15 +39,18 @@
 
         <section id="bio">
             <!--bio section! not too personal-->
+
+            <h2>Biography:</h2>
+
             <div>
                 <p>I want to be...</p>
                 <p>An IT Professionalist.</p>
 
-                <p>I enjoy...</p>
-                <p>playing the drumset and video games.</p>
+                <p>I like to...</p>
+                <p>play the drumset and video games.</p>
 
                 <p>I graduated from...</p>
-                <p>Warren Hills High School.</p>
+                <p>Warren Hills Regional High School.</p>
 
                 <p>I have three dogs...</p>
                 <p>named Pluto, Lane, and Saki.</p>
@@ -58,6 +61,25 @@
 
             </div>
         
+        </section>
+
+        <section id="hobbies">
+
+            <h2>Hobbies:</h2>
+
+            <ul>
+
+                <li>Snowboarding</li>
+                <li>Playing Drumset</li>
+                <li>Playing with my dogs</li>
+                <li>Playing Video Games</li>
+                <li>Computer Science</li>
+
+
+
+            </ul>
+
+
         </section>
 
     </main>
