--- a/index.html
+++ b/index.html
@@ -82,6 +82,31 @@
 
         </section>
 
+
+        <section id="gallery">
+
+            <h2>Photo Gallery</h2>
+
+            <hr>
+
+            <figure>
+                <img src="Images/snowboard-640w.jpg" alt="My Snowboard">
+                <figcaption>My snowboard I have used for three years</figcaption>
+            </figure>
+
+            <figure>
+                <img src="Images/drumset-640w.jpg" alt="My drumset">
+                <figcaption>My drumset I got for Christmas that I play</figcaption>
+            </figure>
+
+            <figure>
+                <img src="Images/dogs-640w.jpg" alt="My Snowboard">
+                <figcaption>My three dogs, Saki, Lane, and Pluto, names from back to front</figcaption>
+            </figure>
+
+
+        </section>
+
     </main>
 
     <footer>
