--- a/index.html
+++ b/index.html
@@ -104,6 +104,22 @@
                 <figcaption>My three dogs, Saki, Lane, and Pluto, names from back to front</figcaption>
             </figure>
 
+            
+
+        </section>
+
+        <section id="video">
+
+            <h2>A Short Video:</h2>
+
+            <iframe width="560" height="315" 
+            src="https://www.youtube.com/embed/JiEdhGYYu7s" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <h3>This video displays some funny pictures of my three dogs. Pluto is the brown and white
+                one, Lane is the black and white one, and Saki is the black one.
+            </h3>
 
         </section>
 
