--- a/index.html
+++ b/index.html
@@ -239,15 +239,15 @@
 
                     <div id="FormElements">
                         <!-- Name -->
-                        <label for="name">Name (required) </label>
+                        <label for="name">Name (required)</label>
                         <input type = "text" id="name" name="name" required>
 
                         <!-- Email -->
-                        <label for="email">Email (required) </label>
+                        <label for="email">Email (required)</label>
                         <input type = "email" id="email" name="email" required>
 
                         <!-- Phone -->
-                        <label for="tel">Phone (optional) </label>
+                        <label for="tel">Phone (optional)</label>
                         <input type = "tel" id="phone" name="phone">
                     
                         <!-- Phone Type -->
@@ -284,7 +284,7 @@
                         </fieldset>
                         
                         <!-- Submit -->
-                        <button type="submit">Send </button>
+                        <button type="submit" id="button">Send </button>
 
 
                     </div>
