--- a/index.html
+++ b/index.html
@@ -239,19 +239,19 @@
 
                     <div id="FormElements">
                         <!-- Name -->
-                        <label for="name">Name (required)</label>
-                        <input type = "text" id="name" name="name" required>
+                        <label for="name">Name (required)</label><br>
+                        <input type = "text" id="name" name="name" required><br>
 
                         <!-- Email -->
-                        <label for="email">Email (required)</label>
-                        <input type = "email" id="email" name="email" required>
+                        <label for="email">Email (required)</label><br>
+                        <input type = "email" id="email" name="email" required><br>
 
                         <!-- Phone -->
-                        <label for="tel">Phone (optional)</label>
-                        <input type = "tel" id="phone" name="phone">
+                        <label for="tel">Phone (optional)</label><br>
+                        <input type = "tel" id="phone" name="phone"><br>
                     
                         <!-- Phone Type -->
-                        <label for="phonetype">Phone type (optional)</label>
+                        <label for="phonetype">Phone type (optional)</label><br>
                         <select id="phonetype" name="phonetype">
                             <option value="" selected>Select phone type</option>
                             <option value="Mobile">Mobile</option>
@@ -260,8 +260,8 @@
                         </select>
 
                         <!-- Message -->
-                        <label for="message">Message (optional)</label>
-                        <textarea id="message" name="message" rows ="8"></textarea>
+                        <br><label for="message">Message (optional)</label>
+                        <br><textarea id="message" name="message" rows ="8"></textarea>
 
                         <!-- Reply -->
                         <fieldset>
