--- a/index.html
+++ b/index.html
@@ -230,78 +230,78 @@
                 Contact Us:
             </h2>
 
-            <form id="contactForm" name="contactForm" method = "post" data-netlify="true">
+                <form id="contactForm" name="contactForm" method = "POST" data-netlify="true">
 
-                <fieldset>
-                    <legend>
-                        Contact Form
-                    </legend>
+                    <fieldset>
+                        <legend>
+                            Contact Form
+                        </legend>
 
-                    <div id="FormElements">
-                        <!-- Name -->
-                        <label for="name">Name (required)</label><br>
-                        <input type = "text" id="name" name="name" required><br>
+                        <div id="FormElements">
+                            <!-- Name -->
+                            <label for="name">Name (required)</label><br>
+                            <input type = "text" id="name" name="name" required><br>
 
-                        <!-- Email -->
-                        <label for="email">Email (required)</label><br>
-                        <input type = "email" id="email" name="email" required><br>
+                            <!-- Email -->
+                            <label for="email">Email (required)</label><br>
+                            <input type = "email" id="email" name="email" required><br>
 
-                        <!-- Phone -->
-                        <label for="tel">Phone (optional)</label><br>
-                        <input type = "tel" id="phone" name="phone"><br>
+                            <!-- Phone -->
+                            <label for="tel">Phone (optional)</label><br>
+                            <input type = "tel" id="phone" name="phone"><br>
                     
-                        <!-- Phone Type -->
-                        <label for="phonetype">Phone type (optional)</label><br>
-                        <select id="phonetype" name="phonetype">
-                            <option value="" selected>Select phone type</option>
-                            <option value="Mobile">Mobile</option>
-                            <option value="Work">Work</option>
-                            <option value="Home">Home</option>
-                        </select>
+                            <!-- Phone Type -->
+                            <label for="phonetype">Phone type (optional)</label><br>
+                            <select id="phonetype" name="phonetype">
+                                <option value="" selected>Select phone type</option>
+                                <option value="Mobile">Mobile</option>
+                                <option value="Work">Work</option>
+                                <option value="Home">Home</option>
+                            </select>
 
-                        <!-- Message -->
-                        <br><label for="message">Message (optional)</label>
-                        <br><textarea id="message" name="message" rows ="8"></textarea>
+                            <!-- Message -->
+                            <br><label for="message">Message (optional)</label>
+                            <br><textarea id="message" name="message" rows ="8"></textarea>
 
-                        <!-- Reply -->
-                        <fieldset>
-                            <legend>Would you like a reply?</legend>
+                            <!-- Reply -->
+                            <fieldset>
+                                <legend>Would you like a reply?</legend>
 
-                            <ul>
-                                <li>
-                                    <input type="radio" id="message-yes"
-                                    name="reply" value = "Yes for a reply please.">
-                                    <label for="message-yes">Yes a reply would be nice.</label>
-                                </li>
-                                <li>
-                                    <input type="radio" id="message-no"
-                                    name="reply" value="No reply please." checked>
-                                    <label for="message-no">No, thanks.</label>
-                                </li>
-                            </ul>
+                                <ul>
+                                    <li>
+                                        <input type="radio" id="message-yes"
+                                        name="reply" value = "Yes for a reply please.">
+                                        <label for="message-yes">Yes a reply would be nice.</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" id="message-no"
+                                        name="reply" value="No reply please." checked>
+                                        <label for="message-no">No, thanks.</label>
+                                   </li>
+                                </ul>
 
 
-                        </fieldset>
+                            </fieldset>
                         
-                        <!-- Submit -->
-                        <button type="submit" id="button">Send </button>
+                            <!-- Submit -->
+                            <button type="submit" id="button">Send </button>
 
 
-                    </div>
+                        </div>
 
-                </fieldset>
+                    </fieldset>
 
-            </form>
-
-
-        </section>
+                </form>
 
 
-
+            </section>
 
 
 
-    </main>
+
+
+
+        </main>
 
     <footer>
 
