--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 Contact Us:
             </h2>
 
-                <form id="contactForm" name="contactForm" method="POST" data-netlify="true">
+                <form id="contactForm" name="contactForm" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" _lpchecked="1">
 
                     <fieldset>
                         <legend>
